--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A bot that acomplishes multiple tasks for the new-xkit team",
   "main": "main.js",
   "dependencies": {
-    "irc": "^0.3.12"
+    "irc": "^0.3.12",
+    "octonode": "^0.7.1"
   },
   "devDependencies": {},
   "scripts": {
